force-app/main/default/objects/Partner__c/Partner__c.object-meta.xml
<CustomObject>
    <label>대리점</label>
    <pluralLabel>Partners</pluralLabel>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>