force-app/main/default/objects/Partner__c/fields/BankAccountOwner__c.field-meta.xml
<CustomField>
    <fullName>BankAccountOwner__c</fullName>
    <label>Bank Account Owner</label>
    <length>200</length>
    <type>Text</type>
</CustomField>