force-app/main/default/objects/Partner__c/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <label>Business Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>