force-app/main/default/objects/Partner__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUSTRALIA</fullName>
            </value>
            <value>
                <fullName>BELGIUM</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>DENMARK</fullName>
            </value>
            <value>
                <fullName>SPAIN</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>KOREA</fullName>
            </value>
            <value>
                <fullName>MOLDOVA</fullName>
            </value>
            <value>
                <fullName>MEXICO</fullName>
            </value>
            <value>
                <fullName>POLAND</fullName>
            </value>
            <value>
                <fullName>THAILAND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>