force-app/main/default/objects/Partner__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <label>Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocker</fullName>
                <default>true</default>
                <label>발주막기</label>
            </value>
            <value>
                <fullName>Always</fullName>
                <label>항상가능</label>
            </value>
            <value>
                <fullName>Temporarily</fullName>
                <label>일시가능</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>