force-app/main/default/objects/Partner__c/fields/DirectDelivery__c.field-meta.xml
<CustomField>
    <fullName>DirectDelivery__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Direct Delivery</label>
    <type>Checkbox</type>
</CustomField>