force-app/main/default/objects/Partner__c/fields/LeadDay__c.field-meta.xml
<CustomField>
    <fullName>LeadDay__c</fullName>
    <label>Lead Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>