force-app/main/default/objects/Partner__c/fields/NameEng__c.field-meta.xml
<CustomField>
    <fullName>NameEng__c</fullName>
    <label>Name(Eng.)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>