force-app/main/default/objects/Partner__c/fields/PartnerCode__c.field-meta.xml
<CustomField>
    <fullName>PartnerCode__c</fullName>
    <label>Partner Code</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>