force-app/main/default/objects/Partner__c/fields/PartnerType__c.field-meta.xml
<CustomField>
    <fullName>PartnerType__c</fullName>
    <description>이 값에 따라 권한이 다름</description>
    <label>Partner Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
                <label>직영</label>
            </value>
            <value>
                <fullName>Compound</fullName>
                <label>복합</label>
            </value>
            <value>
                <fullName>Consignment</fullName>
                <label>위탁</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>