force-app/main/default/objects/Partner__c/fields/PurchaseManager__c.field-meta.xml
<CustomField>
    <fullName>PurchaseManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>본사 직원만 조회(필터), 본사 발주 담당자</description>
    <label>Purchase Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agency</relationshipName>
    <type>Lookup</type>
</CustomField>