force-app/main/default/objects/Partner__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NorthernSeoul</fullName>
                <label>서울북부</label>
            </value>
            <value>
                <fullName>SouthernSeoul</fullName>
                <label>서울남부</label>
            </value>
            <value>
                <fullName>NorthernGyeonggi</fullName>
                <label>경기북부</label>
            </value>
            <value>
                <fullName>SouthernGyeonggi</fullName>
                <label>경긴남부</label>
            </value>
            <value>
                <fullName>Incheon</fullName>
                <label>인천</label>
            </value>
            <value>
                <fullName>Central</fullName>
                <label>중부</label>
            </value>
            <value>
                <fullName>Gangwon</fullName>
                <label>강원</label>
            </value>
            <value>
                <fullName>Yeongnam</fullName>
                <label>영남</label>
            </value>
            <value>
                <fullName>Honam</fullName>
                <label>호남</label>
            </value>
            <value>
                <fullName>Jeju</fullName>
                <label>제주</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>