force-app/main/default/objects/Partner__c/fields/Representative__c.field-meta.xml
<CustomField>
    <fullName>Representative__c</fullName>
    <label>Representative Name(Kor)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>