force-app/main/default/objects/Partner__c/fields/RestofAddress__c.field-meta.xml
<CustomField>
    <fullName>RestofAddress__c</fullName>
    <label>Rest of Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>