force-app/main/default/objects/Partner__c/fields/SettleUpType__c.field-meta.xml
<CustomField>
    <fullName>SettleUpType__c</fullName>
    <description>참고성 정보, 추후활용</description>
    <label>Settle Up Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day1st</fullName>
                <label>매월1일</label>
            </value>
            <value>
                <fullName>Day15th</fullName>
                <label>매월15일</label>
            </value>
            <value>
                <fullName>DayLast</fullName>
                <label>매월말일</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <label>기타</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>